Progress: Notebook 01 PubMed ingestion core functions working
Implemented and tested:
- load_config(): YAML configuration loading with multi-line string handling
- build_query(): Query construction with year templating and whitespace cleanup
- esearch(): NCBI ESearch API integration with JSON response parsing
- get_all_pmids(): Pagination with 10K result limit handling and progress tracking

Key learnings:
- Fixed NCBI API maintenance detection and error handling
- Resolved JSON decode errors from control characters in queries
- Implemented NCBI 10K result limit (max 10,000 records per query)
- Added python-dotenv for environment variable management

Dataset estimates:
- ~80,000 papers total (10K/year × 8 years)
- Sufficient for multi-label classifier training

Next: efetch() function and XML storage

--- a/configs/query.yaml
+++ b/configs/query.yaml
@@ -3,13 +3,10 @@ end_year: 2025
 language: English
 batch_ids: 500
 batch_fetch: 200
-
 # A conservative dentistry scope; you can widen/narrow later.
-term_template: >
-  (
-    dentistry[MeSH Terms] OR dental[Title/Abstract] OR "oral surgery"[Title/Abstract]
-    OR periodont*[Title/Abstract] OR implant*[Title/Abstract]
-    OR prosthodont*[Title/Abstract] OR endodont*[Title/Abstract]
-    OR orthodont*[Title/Abstract] OR "maxillofacial"[Title/Abstract]
-  ) AND ({{year}}[PDAT]:{{year}}[PDAT])
-
+term_template: |
+  (dentistry[MeSH Terms] OR dental[Title/Abstract] OR "oral surgery"[Title/Abstract]
+   OR periodont*[Title/Abstract] OR implant*[Title/Abstract]
+   OR prosthodont*[Title/Abstract] OR endodont*[Title/Abstract]
+   OR orthodont*[Title/Abstract] OR "maxillofacial"[Title/Abstract])
+   AND ({{year}}[PDAT]:{{year}}[PDAT])
